# transcription

./: .gitattributes  .gitignore  .pylintrc  Makefile  README.md  job_batch.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: _shared.yaml  main.yaml  pose_to_segments.yaml  pose_to_text.yaml  pose_to_video.yaml  shared.yaml  text_to_pose.yaml  text_to_text.yaml  video_to_pose.yaml
_shared/: pose_utils.py  tfds_dataset.py
_shared/collator/: __init__.py
_shared/models/: README.md  __init__.py  pose_encoder.py
_shared/signwriting/: signwriting.py
_shared/tokenizers/: __init__.py
pose_to_segments/: PRIVATE.md  README.md  args.py  bin.py  data.py  find_optimal_cutoff.py  model.py  model_torch_to_keras.py  pred.py  probs_to_segments.py  train.py
pose_to_segments/figures/: optical_flow.py  signbank_statistics.py
pose_to_segments/jobs/: job_batch.sh  job_batch_decoding.sh  job_batch_decoding_E1s.sh  job_batch_decoding_E4s.sh  job_batch_eval.sh  job_gpu.sh
pose_to_segments/src/: args.py  data.py  evaluate_mediapi.py  find_optimal_cutoff.py  model.py  plot_segment_distribution.py  pred.py  summary.csv  summary.py  summary_decoding.csv  summary_decoding.py  summary_decoding_E1s.csv  summary_decoding_E4s.csv  summary_eval.csv  summary_eval.py  summary_mediapi.csv  summary_mediapi.py  summary_pro.csv  summary_pro.py  summary_pro_new.csv  summary_pro_new.py  summary_to_latex.py  train.py
pose_to_segments/tests/: data_test.py  model_overfit_test.py  model_test.py
pose_to_text/: IDEA-CLIP.md  IDEA.md  README.md  batch.py  batch_memory_profile.py  batch_sampler.py  data.py  dataset.py  model.py  train.py
pose_to_text/configs/: default.yaml
pose_to_text/profile/: fit.py  output.txt
pose_to_text/tests/: model_overfit_test.py  model_test.py
pose_to_video/: IDEA.md  README.md  bin.py
pose_to_video/animation_control/: README.md  train_mixamo.sh  train_stylegan3.sh
pose_to_video/assets/: example-img.pose  example_video.pose  testing-reduced.pose  what-is-your-name-original.pose
pose_to_video/diffusion/: one_shot.py
pose_to_video/mixamo/: Dockerfile  README.md  render.py
pose_to_video/pix_to_pix/: README.md  __init__.py  keras_to_tfjs.sh  model_videos.sh  progress_video.sh
pose_to_video/stylegan3/: .gitignore  Dockerfile  README.md
pose_to_video/upscaler/: .gitignore  Dockerfile  README.md  __init__.py  keras_to_tfjs.sh
shared/: collator.py  pose_utils.py  tfds_dataset.py
shared/collator/: collator.py
shared/models/: README.md  pose_encoder.py
shared/signwriting/: signwriting.py  test_signwriting.py
shared/tokenizers/: __init__.py  base_tokenizer.py  dummy_tokenizer.py  sign_language_tokenizer.py
text_to_pose/: README.md  args.py  data.py  model.py  pred.py  requirements.txt  train.py  utils.py
text_to_pose/diffusion/: IDEA.md  README.md  requirements.txt  sweep.yaml
text_to_pose/ham2pose/: README.md
text_to_pose/model/: distribution.py  image_encoder.py  iterative_decoder.py  masked_loss.py  text_encoder.py
text_to_pose/tests/: data_test.py  distribution_model_test.py  model_overfit_test.py  model_test.py  schedule_test.py  tokenizer.py  tokenizer_test.py
text_to_text/: .gitignore  README.md  prepare_model.py  run_inference.py  run_translation.py  text_to_text_idea.md  video_to_text_idea.md
text_to_text/_tokenizers/: encoder_decoder_tokenizer.py  sign_language_tokenizer.py  test_sign_language_tokenizer.py
text_to_text/bergamot/: Dockerfile  INSTRUCTIONS.md  config.spoken-to-signed.yml  config.yml  profile.yml
text_to_text/data/: .gitignore  README.md  __init__.py  bible.py  dgs_corpus.py  dicta_sign.py  fingerspelling.py  sign2mint.py  sign_bank.py  swojs_glossario.py
video_to_pose/: bin.py  directory.py  tmp_draw.py
(+114 files in other folders)
